[project]
name = "mcp-video-converter"
version = "0.1.0"
description = "An MCP server with video conversion tools using FFmpeg."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
mcp-video-converter = "mcp_video_converter.server:main_cli"

# Removing the problematic section
# [tool.uv.sources]
# "mcp-video-converter" = { editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"